<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">


    <TextView
        android:id="@+id/pageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile Page"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/supportLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contact Support"
        app:layout_constraintBottom_toTopOf="@+id/meetingPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <EditText
        android:id="@+id/simpleEditText"
        android:hint="@string/current_name"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="240dp"
        app:layout_constraintBottom_toTopOf="@+id/simpleEditText4"
        app:layout_constraintEnd_toEndOf="@+id/simpleEditText4"
        app:layout_constraintStart_toStartOf="@+id/simpleEditText4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/simpleEditText4"
        android:hint="@string/current_bday"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="40dp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="280dp"
        app:layout_constraintBottom_toTopOf="@+id/simpleEditText5"
        app:layout_constraintEnd_toEndOf="@+id/simpleEditText5"
        app:layout_constraintStart_toStartOf="@+id/simpleEditText5"
        app:layout_constraintTop_toBottomOf="@+id/simpleEditText"/>

    <EditText
        android:id="@+id/simpleEditText5"
        android:hint="@string/current_aff"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/simpleEditText6"
        app:layout_constraintEnd_toEndOf="@+id/simpleEditText6"
        app:layout_constraintStart_toStartOf="@+id/simpleEditText6"
        app:layout_constraintTop_toBottomOf="@+id/simpleEditText4" />

    <EditText
        android:id="@+id/simpleEditText6"
        android:hint="@string/current_prof"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="331dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleEditText5"
        android:onClick="onClickEditButton" />

    <EditText
        android:id="@+id/simpleEditText7"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="331dp"
        android:gravity="start|top"
        android:hint="Please Describe Your Issue"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supportLabel"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="221dp"
        android:onClick="onClickMeetingsPage"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/friendsPageButton"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@id/profilePageButton"
        app:layout_constraintTop_toBottomOf="@+id/simpleEditText"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/sendSupport"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="221dp"
        android:onClick="onClickSendButton"
        android:text="Send"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/friendsPageButton"
        app:layout_constraintTop_toBottomOf="@+id/supportLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profilePageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickProfilePage"
        android:text="@string/profile_page_button"
        android:layout_marginLeft="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/meetingPageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageLabel"
        app:layout_constraintVertical_bias="0.967" />

    <Button
        android:id="@+id/meetingPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClickMeetingsPage"
        android:text="@string/meetings_page_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/friendsPageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/profilePageButton" />

    <Button
        android:id="@+id/friendsPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickFriendsPage"
        android:text="@string/friends_page_button"
        android:layout_marginRight="70dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/meetingPageButton"
        app:layout_constraintTop_toBottomOf="@id/pageLabel"
        app:layout_constraintVertical_bias="0.966" />

</androidx.constraintlayout.widget.ConstraintLayout>