<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/meetingsPageLabel"
        android:text="Meetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCreateMeetingPage"
        android:text="Create"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/meetingsLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickProfilePage"
            android:text="Profile"/>

        <Button
            android:id="@+id/meetingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMeetingsPage"
            android:text="Meetings"/>

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFriendsPage"
            android:text="Friends"/>


    </LinearLayout>
</LinearLayout>